infra/k8s/inventory-depl.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: nguyennoah/inventory-ttshop
          imagePullPolicy: IfNotPresent
