infra/k8s/order-depl.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: nguyennoah/order-ttshop
          imagePullPolicy: IfNotPresent
