infra/k8s/payment-depl.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: nguyennoah/payment-ttshop
          imagePullPolicy: IfNotPresent
