infra/k8s/cart-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart
  ports:
    - name: cart
      protocol: TCP
      port: 3000
      targetPort: 3000
