infra/k8s/config-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-service
spec:
  selector:
    app: config
  ports:
    - name: config
      protocol: TCP
      port: 3000
      targetPort: 3000
