infra/k8s/expiration-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: expiration-service
spec:
  selector:
    app: expiration
  ports:
    - name: expiration
      protocol: TCP
      port: 3000
      targetPort: 3000
