infra/k8s/inventory-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: default
  labels:
    app: inventory
spec:
  selector:
    app: inventory
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
