infra/k8s/inventory-mongo.yaml
# MongoDB data -> D:\LapTrinh\TableTennisShop\infra\data\mongo-inventory

apiVersion: v1
kind: Service
metadata:
  name: inventory-mongo-service
spec:
  selector:
    app: inventory-mongo
  ports:
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-mongo-deployment
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: inventory-mongo
  template:
    metadata:
      labels:
        app: inventory-mongo
    spec:
      containers:
        - name: inventory-mongo
          image: mongo:8.0.10-rc0
          imagePullPolicy: IfNotPresent
          args:
            - mongod
            - --wiredTigerCacheSizeGB
            - "0.25"
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: inventory-mongo-persistent-storage
              mountPath: /data/db
      volumes:
        - name: inventory-mongo-persistent-storage
          hostPath:
            path: /run/desktop/mnt/host/d/LapTrinh/TableTennisShop/infra/data/mongo-inventory
            type: DirectoryOrCreate
