infra/k8s/minio-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-srv
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
