infra/k8s/order-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
    - name: order
      protocol: TCP
      port: 3000
      targetPort: 3000
