infra/k8s/order-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-mongo-service
spec:
  selector:
    app: order-mongo
  ports:
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-mongo
  template:
    metadata:
      labels:
        app: order-mongo
    spec:
      containers:
        - name: order-mongo
          image: mongo:8.0.10-rc0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: order-mongo-persistent-storage
              mountPath: /data/db
      volumes:
        - name: order-mongo-persistent-storage
          emptyDir: {}
