infra/k8s/payment-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment
  ports:
    - name: payment
      protocol: TCP
      port: 3000
      targetPort: 3000
