infra/k8s/payment-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-mongo-service
spec:
  selector:
    app: payment-mongo
  ports:
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-mongo-deployment
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: payment-mongo
  template:
    metadata:
      labels:
        app: payment-mongo
    spec:
      containers:
        - name: payment-mongo
          image: mongo:8.0.10-rc0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: payment-mongo-persistent-storage
              mountPath: /data/db
      volumes:
        - name: payment-mongo-persistent-storage
          persistentVolumeClaim:
            claimName: payment-mongo-pvc
