infra/k8s/product-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
    - name: product
      protocol: TCP
      port: 3000
      targetPort: 3000
